--- a/components/nav-bar.html
+++ b/components/nav-bar.html
@@ -1,11 +1,26 @@
-
-<nav>
-    <div id="logo-icon"></div>
-    <div id="menu-icon"></div>
-    <ul id="nav-list">
-        <li id="list-item">Clients</li>
-        <li id="list-item">Products</li>
-        <li id="list-item">Work whit us</li>
-        <li id="list-item">Contact</li>
-    </ul>
-</nav>
+<link rel="stylesheet" href="../styles/nav-bar.css">
+<header>
+    <nav>
+        <div id="logo-container">
+            <a href="">
+                <svg width="800px" height="800px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M8 16L3.54223 12.3383C1.93278 11.0162 1 9.04287 1 6.96005C1 3.11612 4.15607 0 8 0C11.8439 0 15 3.11612 15 6.96005C15 9.04287 14.0672 11.0162 12.4578 12.3383L8 16ZM3 6H5C6.10457 6 7 6.89543 7 8V9L3 7.5V6ZM11 6C9.89543 6 9 6.89543 9 8V9L13 7.5V6H11Z" fill="#000000"/>
+                </svg>
+            </a>
+        </div>
+        <div id="menu-icon">
+            <svg width="800px" height="800px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 5H15V7H1V5Z" fill="#000000"/>
+                <path d="M1 9H15V11H1V9Z" fill="#000000"/>
+                <path d="M1 13H15V15H1V13Z" fill="#000000"/>
+                <path d="M1 1H15V3H1V1Z" fill="#000000"/>
+            </svg>
+        </div>
+        <ul id="nav-list">
+            <li id="list-item">Clients</li>
+            <li id="list-item">Products</li>
+            <li id="list-item">Work whit us</li>
+            <li id="list-item">Contact</li>
+        </ul>
+    </nav>
+</header>
