--- a/styles/style.css
+++ b/styles/style.css
@@ -6,24 +6,7 @@
 html{
     font-family: sans-serif;
 }
-header{
-    display: grid;
-    grid-template-columns: 1fr 90% 1fr;
-
-    height: 5rem;
-
-    align-items: center;
-    background-color: plum;
-}
-
-h1{
-    justify-self: center;
-}
-#menu-icon{
-    width: 3rem;
-    height: 3rem;
-
-    margin-inline-start: 1rem;
-
-    background-color: grey;
+a{
+    text-decoration: none;
+    color: black;
 }
