--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
-nav{
+#nav-bar{
     display: flex;
     flex-wrap: wrap;
 }
@@ -52,9 +52,4 @@ nav{
 }
 #nav-list a{
     justify-self: center;
-}
-
-a{
-    text-decoration: none;
-    color: black;
 }
