--- a/styles/menu-list.css
+++ b/styles/menu-list.css
@@ -1,13 +1,5 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+@import "styles.css";
 
-}
-a{
-    text-decoration: none;
-    color:black;
-}
 
 #menu-list{
     width: 25rem;
@@ -37,7 +29,7 @@ a{
 }
 #menu-list li:hover{
     cursor:pointer;
-    background-color: rgb(214 214 214 / 50%);
+    background-color: var(--hover);
     padding-inline-start: 1.5rem;
 }
 #menu-listli:hover a{
